--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteCond %{HTTP_HOST} hjk
-RewriteRule (.*) ghjk [R=301,L]
+RewriteCond %{HTTP_HOST} github.com/wadsworthheynoski/mysite.git
+RewriteRule (.*) google.com [R=301,L]
