--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteCond %{HTTP_HOST} adsworthheynoski.github.io
+RewriteCond %{HTTP_HOST} github.io
 RewriteRule (.*) https://google.com [R=301,L]
